plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'main'
version = '1.0-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'
    implementation 'org.hibernate:hibernate-core:6.4.0.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-graphics:21'
}
javafx {
    version = "21.0.6"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics']


}
application {
    mainClass = 'system.LibraryManagementSystem'
}

run {
    jvmArgs = [
            '--module-path', "${System.getProperty('java.home')}/lib",
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

test {
    useJUnitPlatform()
}